@@ -1,3 +1,7 @@
+2001-07-25  Sam Steingold  <sds@gnu.org>
+
+	* defs2.lisp (with-standard-io-syntax): bind *PRINT-LINES*
+
 2001-07-24  Sam Steingold  <sds@gnu.org>
 
 	mingw32 compilation - kill more warnings
